--- a/collateral/index.html
+++ b/collateral/index.html
@@ -7610,7 +7610,7 @@ This file contents common styling of menus.
           <div id="div_block-110-5397" class="ct-div-block">
             <a id="link-255-5397" class="ct-link" href="tel:+13214322983"
               ><h2 id="headline-111-5397" class="ct-headline">
-                AOG? Call TOLL FREE
+                AOG? Call info@jemairpowerint.com
               </h2></a
             >
           </div>
