--- a/search-capabilities/index.html
+++ b/search-capabilities/index.html
@@ -7768,7 +7768,7 @@ This file contents common styling of menus.
                 </div>
                 <div id="div_block-164-4355" class="ct-div-block"></div>
                 <a id="link_text-165-4355" class="ct-link-text" target="_self"
-                  >TOLL FREE<br
+                  >info@jemairpowerint.com<br
                 /></a>
               </div>
             </div>
