--- a/aircraft-platforms/index.html
+++ b/aircraft-platforms/index.html
@@ -7776,7 +7776,7 @@ This file contents common styling of menus.
             <div id="div_block-148-4349" class="ct-div-block">
               <div id="div_block-149-4349" class="ct-div-block">
                 <div id="text_block-150-4349" class="ct-text-block">
-                  AOG<br />
+                  Email<br />
                 </div>
                 <div id="div_block-151-4349" class="ct-div-block"></div>
                 <a id="link_text-152-4349" class="ct-link-text" target="_self"
