--- a/embraer-erj-135-145-parts/index.html
+++ b/embraer-erj-135-145-parts/index.html
@@ -7757,7 +7757,7 @@ This file contents common styling of menus.
                 <li>Priced <strong>below</strong> OEM listing</li>
                 <li>Full traceability </li>
                 <li>Worldwide shipping</li>
-                <li>24-hour <span class="caps">AOG</span> service</li>
+                <li>24-hour <span class="caps">Email</span> service</li>
               </ul>
             </div>
           </div>
