--- a/locations/regional-managers/index.html
+++ b/locations/regional-managers/index.html
@@ -8083,7 +8083,7 @@ This file contents common styling of menus.
           <div id="div_block-147-4355" class="ct-div-block">
             <div id="div_block-162-4355" class="ct-div-block">
               <div id="text_block-163-4355" class="ct-text-block">
-                AOG<br />
+                Email<br />
               </div>
               <div id="div_block-164-4355" class="ct-div-block"></div>
               <a id="link_text-165-4355" class="ct-link-text" target="_self"
