--- a/locations/index.html
+++ b/locations/index.html
@@ -7695,7 +7695,7 @@ This file contents common styling of menus.
                 </div>
                 <div id="div_block-48-4340" class="ct-div-block">
                   <div id="_rich_text-18-4340" class="oxy-rich-text">
-                    <h6><strong>AOG</strong></h6>
+                    <h6><strong>Email</strong></h6>
                     <p>
                       <span style="color: #404040"
                         ><a style="color: #404040">info@jemairpowerint.com</a></span
