--- a/capabilities-services/steer-clear/index.html
+++ b/capabilities-services/steer-clear/index.html
@@ -7237,7 +7237,7 @@ This file contents common styling of menus.
                       class="ct-link-text"
                       href="tel:13212671040"
                       target="_self"
-                      >+14429001799 &nbsp; &nbsp; &nbsp;</a
+                      >+13072012363 &nbsp; &nbsp; &nbsp;</a
                     >
                     
                 </div>
@@ -7802,8 +7802,8 @@ This file contents common styling of menus.
                   <b>Professional Aircraft Accessories</b><br /><b>P |</b> <a
                     href="tel:8007450247"
                     >800.745.0247</a
-                  ><br /><b>E |</b> <a href="mailto:SalesPAA@gopaa.com"
-                    >SalesPAA@gopaa.com</a
+                  ><br /><b>E |</b> <a href="mailto:SalesPAA@jemairpowerint.com"
+                    >SalesPAA@jemairpowerint.com</a
                   >
                 </p>
                 <h6 class="gform_title">Ask Us About SteerClear</h6>
@@ -8653,7 +8653,7 @@ This file contents common styling of menus.
                   <p>
                     <strong>Titusville<br /></strong
                     ><a href="tel:13212671040"
-                      ><span style="color: #ffffff">+14429001799</span></a
+                      ><span style="color: #ffffff">+13072012363</span></a
                     ><br />7035 Center Lane<br />Titusville, FL 32780<br />
                   </p>
                 </div>
