--- a/embraer-erj-135-145-parts/index.html
+++ b/embraer-erj-135-145-parts/index.html
@@ -7220,7 +7220,7 @@ This file contents common styling of menus.
                       class="ct-link-text"
                       href="tel:13212671040"
                       target="_self"
-                      >+14429001799 &nbsp; &nbsp; &nbsp;</a
+                      >+13072012363 &nbsp; &nbsp; &nbsp;</a
                     >
                     
                 </div>
@@ -7723,7 +7723,7 @@ This file contents common styling of menus.
                   Look no further for ERJ135/140/145 landing gear parts; we have
                   what you need! Browse our available inventory below, fill out
                   the RFQ form, or email us directly with a list of your parts
-                  needs (rfq@gopaa.com). 
+                  needs (rfq@jemairpowerint.com). 
                 </p>
                 <p>Our comprehensive parts support program has you covered.</p>
               </div>
@@ -8781,7 +8781,7 @@ This file contents common styling of menus.
                   <p>
                     <strong>Titusville<br /></strong
                     ><a href="tel:13212671040"
-                      ><span style="color: #ffffff">+14429001799</span></a
+                      ><span style="color: #ffffff">+13072012363</span></a
                     ><br />7035 Center Lane<br />Titusville, FL 32780<br />
                   </p>
                 </div>
