--- a/search-parts/index.html
+++ b/search-parts/index.html
@@ -7128,7 +7128,7 @@ This file contents common styling of menus.
                       class="ct-link-text"
                       href="tel:13212671040"
                       target="_self"
-                      >+14429001799 &nbsp; &nbsp; &nbsp;</a
+                      >+13072012363 &nbsp; &nbsp; &nbsp;</a
                     >
                     
                 </div>
@@ -7765,7 +7765,7 @@ This file contents common styling of menus.
         <div class="ct-section-inner-wrap">
           <div id="_rich_text-157-4490" class="oxy-rich-text">
             <h5>
-              <a href="mailto:rfq@gopaa.com"
+              <a href="mailto:rfq@jemairpowerint.com"
                 ><strong>Click here to request a quote</strong></a
               >
             </h5>
@@ -7788,7 +7788,7 @@ This file contents common styling of menus.
                 class="ct-link-text"
                 href="tel:13212671040"
                 target="_self"
-                >+14429001799<br
+                >+13072012363<br
               /></a>
             </div>
             <div id="div_block-150-4355" class="ct-div-block">
@@ -8138,7 +8138,7 @@ This file contents common styling of menus.
                   <p>
                     <strong>Titusville<br /></strong
                     ><a href="tel:13212671040"
-                      ><span style="color: #ffffff">+14429001799</span></a
+                      ><span style="color: #ffffff">+13072012363</span></a
                     ><br />7035 Center Lane<br />Titusville, FL 32780<br />
                   </p>
                 </div>
