--- a/locations/regional-managers/index.html
+++ b/locations/regional-managers/index.html
@@ -7618,14 +7618,14 @@ This file contents common styling of menus.
               holds certifications from the
               <a
                 class="c-link"
-                href="../../company/certifications-awards/index.html"
+                href=" "
                 target="_blank"
                 rel="noopener noreferrer"
                 data-sk="tooltip_parent"
                 >Federal Aviation Administration (FAA)</a
               > and the <a
                 class="c-link"
-                href="../../company/certifications-awards/index.html"
+                href=" "
                 target="_blank"
                 rel="noopener noreferrer"
                 data-sk="tooltip_parent"
